--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - gem update --system
   - gem install bundler
 
-script: bundle exec jekyll serve
+script: bundle exec jekyll build
