--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: ruby
 rvm:
-  - 2.6
+  - 2.6.3
+cache: bundler
 
 before_install:
   - gem update --system
   - gem install bundler
 
-script: bundle exec jekyll serve
+script: bundle exec jekyll build
