Add Cristine Guadelupe

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -67,3 +67,11 @@ willian-frantz:
     github: https://github.com/wlsf
     linkedin: https://www.linkedin.com/in/willianfrantz/
     twitter: https://twitter.com/frantz_willian
+
+cristine-guadelupe:
+  name: Cristine Guadelupe
+  title: Desenvolvedora
+  urls:
+    github: https://github.com/cristineguadelupe
+    linkedin: https://www.linkedin.com/in/cristineguadelupe/
+    twitter: https://twitter.com/crisguade
