Update website URL for Joel Jucá in people.yml

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -118,7 +118,7 @@ joel-juca:
     github: https://github.com/joeljuca
     linkedin: https://www.linkedin.com/in/joeljuca/
     twitter: https://twitter.com/holyshtjoe
-    website: https://j0e.cc
+    website: https://joeljuca.com
 
 joffily-ferreira:
   name: Joffily Ferreira
